# solver-api

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
api/: auth.py  cache.py  config.py  monitor.py
api/endpoints/: geography.py  prediction.py  utils.py
api/models/: data.py  fire.py  geo.py  geography.py  meteorology.py  resource.py  solver.py  weather.py
api/services/: firebase_service.py  geo_service.py  geography_service.py  meteorology_service.py  prediction_service.py  weather_service.py
tests/: test_geography.py  test_prediction.py
