[project]
name = "solver-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.12",
    "fastapi>=0.115.8",
    "firebase-admin>=6.6.0",
    "geopy>=2.4.1",
    "pyproj>=3.6.1",
    "pyshp>=2.3.1",
    "rasterio>=1.4.3",
    "shapely>=2.0.7",
    "uvicorn>=0.34.0",
]
